<resources>
    <string name="app_name">TPG</string>
    <string name="scanner_un_qr_code">Scanner un QR code</string>
    <string name="rechercher_une_machine_par_son_id">Rechercher une machine par son id</string>
    <string name="appeler_un_expert">Appeler un expert</string>
    <string name="preferences">Préférences</string>
    <string name="entrez_l_id_d_une_machine">Entrez l\'id d\'une machine</string>
    <string name="machine_id">Machine id :</string>
    <string name="ok">OK</string>
    <string name="id_de_la_machine">Id de la machine :</string>
    <string name="raw_output">Raw Output :</string>
    <string name="nombre_d_utilisations">Nombre d\'utilisations :</string>
    <string name="nombre_d_heures">Nombre d\'heures :</string>
    <string name="marque">Marque :</string>
    <string name="mod_le">Modèle :</string>
    <string name="type">Type :</string>
    <string name="nom">Nom :</string>
    <string name="date_de_mise_en_service">Date de mise en service :</string>
    <string name="tpg_logo">TPG logo</string>
    <string name="se_connecter">Se connecter</string>
    <string name="default_user_logo">Default User Logo</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion_reussie">Connexion réussie</string>
    <string name="connexion_manquant">Veuillez indiquer votre email et votre mot de pass</string>
    <string name="connexion_echoue">Impossible de se connecter</string>
    <string name="erreur">Une erreur est survenue</string>
    <string name="maintenances_menu_logo">Maintenances Menu Logo</string>
    <string name="scan_menu_logo">Scan Menu Logo</string>
    <string name="history_menu_logo">History Menu Logo</string>
    <string name="profile_menu_logo">Profile Menu Logo</string>
    <string name="image_machine_description">Machine image</string>
    <string name="ajouter_une_maintenance">Ajouter une maintenance</string>
    <string name="provenance">Provenance :</string>
    <string name="nombre_maintenances">Nombre maintenances :</string>
    <string name="horodatage">Horodatage :</string>
    <string name="je_connais_l_id_de_la_machine">Je connais l\'ID de la machine</string>
    <string name="valider">Valider</string>
    <string name="maintenance_image">Maintenance image</string>
    <string name="id">id :</string>
    <string name="maintenances">Maintenances</string>
    <string name="profil_image_description">Profil image</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="nom_du_technicien">Nom du technicien</string>
    <string name="email">Email :</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="entreprise">Entreprise</string>
    <string name="description">Description</string>
    <string name="op_rateur">Opérateur :</string>
    <string name="ajouter_la_maintenance">Ajouter la maintenance</string>
    <string name="chargement">Chargement…</string>
    <string name="ajout_de_maintenance">Ajout de maintenance</string>
    <string name="machine">Machine</string>
    <string name="maintenance">Maintenance</string>
    <string name="profil">Profil</string>
    <string name="scan_machine">Scan Machine</string>
    <string name="prendre_une_photo">Prendre une photo</string>
    <string name="lancer_un_appel">Lancer un appel</string>
    <string name="appel_technicien">Appel technicien</string>
    <string name="qr_code_invalide">QR Code invalide</string>
    <string name="hf_commands_terminer_ajouter_maintenance">hf_commands:Terminer,Ajouter maintenance</string>
    <string name="hf_commands_prendre_photo_prendre_une_photo_ajouter_photo_ajouter_une_photo">hf_commands:Prendre photo,Prendre une photo,Ajouter photo,Ajouter une photo</string>
    <string name="hf_text_dictation_hf_commands_entrer_description">hf_text_dictation|hf_commands:Entrer description, Description</string>
    <string name="hf_commands_liste_maintenances_toutes_maintenances_maintenances">hf_commands:Liste maintenances,Toutes maintenances, Maintenances</string>
    <string name="hf_commands_scanner_machine_machine_scanner_qr_code_choisir_machine">hf_commands:Scanner machine,Machine,Scanner QR code,Choisir machine, Scanner</string>
    <string name="hf_commands_historique_mes_maintenances_liste_maintenances_perso">hf_commands:Historique,Mes maintenances,Liste maintenances perso</string>
    <string name="hf_commands_mon_compte_mes_infos_profil">hf_commands:Mon compte,Mes infos,Profil</string>
    <string name="hf_text_dictation_hf_commands_identifiant">hf_text_dictation|hf_commands:Identifiant</string>
    <string name="hf_text_dictation_hf_commands_mot_de_passe">hf_text_dictation|hf_commands:Mot de passe</string>
    <string name="hf_commands_se_connecter_connexion">hf_commands:Se connecter,Connexion</string>
    <string name="hf_commands_maintenances_liste_maintenances_maintenances_machine">hf_commands:Maintenances,Liste maintenances,Maintenances machine</string>
    <string name="hf_commands_ajouter_une_maintenance_ajout_maintenance">hf_commands:Ajouter une maintenance,Ajout maintenance</string>
    <string name="hf_commands_se_connecter_lancer_commencer">hf_commands:Se connecter,Lancer,Commencer</string>
    <string name="hf_commands_se_d_connecter_d_connexion_quitter">hf_commands:Se déconnecter,Déconnexion,Quitter</string>
    <string name="hf_commands_lancer_appel_lancer_un_appel_appeler">hf_commands:Lancer appel,Lancer un appel,Appeler</string>
    <string name="hf_text_dictation_hf_commands_entrer_id_je_connais_l_id_de_la_machine_id_machine_entrer_manuellement">hf_text_dictation|hf_commands:Entrer ID,Je connais l ID de la machine,ID Machine,Entrer manuellement</string>
    <string name="hf_commands_valider">hf_commands:Valider</string>
</resources>