<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateMaintenanceActivity"
    android:background="@color/white"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/op_rateur"
                android:textColor="@color/black"
                android:paddingEnd="10dp"
                />

            <TextView
                android:id="@+id/txtOperateurEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="test@mail.com"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_id"
                android:textColor="@color/black"
                android:paddingEnd="10dp"
                />

            <TextView
                android:id="@+id/txtMachineId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="123"
                />
        </LinearLayout>


        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:contentDescription="@string/hf_text_dictation_hf_commands_entrer_description"
            android:gravity="top"
            android:autofillHints="@string/description"
            android:hint="@string/description"
            android:background="@drawable/edittext_background"
            android:elevation="4dp"
            android:layout_marginBottom="12dp"
            android:inputType="text|textMultiLine"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="10dp">

        <ImageView
            android:id="@+id/maintenanceImage"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:contentDescription="@string/maintenance_image"
            app:srcCompat="@drawable/no_image"
            />

        <Button
            android:id="@+id/prendre_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary"
            android:contentDescription="@string/hf_commands_prendre_photo_prendre_une_photo_ajouter_photo_ajouter_une_photo"
            android:elevation="4dp"
            android:stateListAnimator="@animator/button_state_list_animator"
            android:text="@string/prendre_une_photo"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/creer_maintenance_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/primary"
            android:elevation="4dp"
            android:stateListAnimator="@animator/button_state_list_animator"
            android:contentDescription="@string/hf_commands_terminer_ajouter_maintenance"
            android:text="@string/ajouter_la_maintenance"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>