<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#303030"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="TPG" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:gravity="center"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/login_default_icon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/default_user_logo"
                    app:srcCompat="@drawable/default_user" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:minWidth="250dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:textColorHint="@color/dark_gray"
                        android:contentDescription="@string/hf_text_dictation_hf_commands_identifiant"
                        android:hint="@string/identifiant"
                        android:autofillHints="@string/identifiant"
                        android:background="@drawable/edittext_background"
                        android:elevation="4dp"
                        android:textAlignment="center"
                        android:layout_marginBottom="12dp"
                        android:inputType="text"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/black"
                        android:contentDescription="@string/hf_text_dictation_hf_commands_mot_de_passe"
                        android:textColorHint="@color/dark_gray"
                        android:autofillHints="@string/mot_de_passe"
                        android:hint="@string/mot_de_passe"
                        android:background="@drawable/edittext_background"
                        android:elevation="4dp"
                        android:textAlignment="center"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="6dp"
                        android:inputType="textPassword"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/hf_commands_se_connecter_connexion"
                android:layout_marginTop="10dp"
                android:elevation="4dp"
                android:backgroundTint="@color/primary"
                android:stateListAnimator="@animator/button_state_list_animator"
                android:text="@string/se_connecter"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                />

        </LinearLayout>

        <com.budiyev.android.codescanner.CodeScannerView
            android:id="@+id/scanner_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:autoFocusButtonColor="@android:color/white"
            app:autoFocusButtonVisible="true"
            app:flashButtonColor="@android:color/white"
            app:flashButtonVisible="true"
            app:frameColor="@android:color/white"
            app:frameCornersSize="50dp"
            app:frameCornersRadius="0dp"
            app:frameAspectRatioWidth="1"
            app:frameAspectRatioHeight="1"
            app:frameSize="0.75"
            app:frameThickness="2dp"
            app:frameVerticalBias="0.5"
            app:maskColor="#77000000"/>

    </LinearLayout>

</LinearLayout>