<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#303030"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="TPG" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center"
        >

        <LinearLayout
            android:id="@+id/navbar"
            android:layout_width="wrap_content"
            android:paddingHorizontal="10dp"
            android:background="@color/white"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/nav_maintenances"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/maintenances_menu_logo"
                app:srcCompat="@drawable/nav_maintenances" />

            <ImageView
                android:id="@+id/nav_scan"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/scan_menu_logo"
                app:srcCompat="@drawable/nav_scan" />

            <ImageView
                android:id="@+id/nav_history"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/history_menu_logo"
                app:srcCompat="@drawable/nav_history" />

            <ImageView
                android:id="@+id/nav_profile"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/profile_menu_logo"
                app:srcCompat="@drawable/default_user" />

        </LinearLayout>
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </FrameLayout>
    </LinearLayout>



</LinearLayout>