<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <com.budiyev.android.codescanner.CodeScannerView
                android:id="@+id/scanner_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                app:autoFocusButtonColor="@android:color/white"
                app:autoFocusButtonVisible="true"
                app:flashButtonColor="@android:color/white"
                app:flashButtonVisible="true"
                app:frameColor="@android:color/white"
                app:frameCornersSize="50dp"
                app:frameCornersRadius="0dp"
                app:frameAspectRatioWidth="1"
                app:frameAspectRatioHeight="1"
                app:frameSize="0.75"
                app:frameThickness="2dp"
                app:frameVerticalBias="0.5"
                app:maskColor="#77000000"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">
                <EditText
                    android:id="@+id/machine_scan_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hf_text_dictation_hf_commands_entrer_id_je_connais_l_id_de_la_machine_id_machine_entrer_manuellement"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_gray"
                    android:hint="@string/je_connais_l_id_de_la_machine"
                    android:autofillHints="ID de la machine"
                    android:background="@drawable/edittext_background"
                    android:elevation="4dp"
                    android:textAlignment="center"
                    android:layout_marginEnd="10dp"
                    android:inputType="text"
                    tools:ignore="ContentDescription" />

                <Button
                    android:id="@+id/scan_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hf_commands_valider"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/primary"
                    android:elevation="4dp"
                    android:stateListAnimator="@animator/button_state_list_animator"
                    android:text="@string/valider"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

    </LinearLayout>
